// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`extractPianoPartData > correctly handles eighth notes, silences and note alterations 1`] = `
[
  {
    "harmony": {
      "beats": 4,
      "beatsType": 4,
      "divisions": 2,
      "harmonyDuration": 8,
      "harmonyKind": "minor-seventh",
      "harmonyRootAlter": 0,
      "harmonyRootStep": "D",
      "keyFifths": 0,
    },
    "sequence": {
      "leftHand": [
        {
          "duration": 1,
          "pitchOctave": 4,
          "pitchStep": "C",
        },
        {
          "duration": 1,
          "rest": true,
        },
        {
          "duration": 1,
          "rest": true,
        },
        {
          "duration": 1,
          "pitchOctave": 4,
          "pitchStep": "C",
        },
        {
          "duration": 4,
          "rest": true,
        },
      ],
      "rightHand": [
        {
          "duration": 1,
          "pitchOctave": 4,
          "pitchStep": "F",
        },
        {
          "chord": true,
          "duration": 1,
          "pitchOctave": 4,
          "pitchStep": "A",
        },
        {
          "chord": true,
          "duration": 1,
          "pitchOctave": 5,
          "pitchStep": "E",
        },
        {
          "duration": 1,
          "rest": true,
        },
        {
          "duration": 1,
          "rest": true,
        },
        {
          "duration": 1,
          "pitchOctave": 4,
          "pitchStep": "F",
        },
        {
          "chord": true,
          "duration": 1,
          "pitchOctave": 4,
          "pitchStep": "A",
        },
        {
          "chord": true,
          "duration": 1,
          "pitchOctave": 5,
          "pitchStep": "E",
        },
        {
          "duration": 4,
          "rest": true,
        },
      ],
    },
  },
  {
    "harmony": {
      "beats": 4,
      "beatsType": 4,
      "divisions": 2,
      "harmonyDuration": 8,
      "harmonyKind": "dominant",
      "harmonyRootAlter": 0,
      "harmonyRootStep": "G",
      "keyFifths": 0,
    },
    "sequence": {
      "leftHand": [
        {
          "duration": 1,
          "pitchOctave": 3,
          "pitchStep": "B",
        },
        {
          "duration": 1,
          "pitchOctave": 3,
          "pitchStep": "B",
        },
        {
          "duration": 2,
          "rest": true,
        },
        {
          "duration": 1,
          "rest": true,
        },
        {
          "duration": 1,
          "pitchOctave": 3,
          "pitchStep": "B",
        },
        {
          "duration": 2,
          "rest": true,
        },
      ],
      "rightHand": [
        {
          "duration": 1,
          "pitchOctave": 4,
          "pitchStep": "F",
        },
        {
          "chord": true,
          "duration": 1,
          "pitchOctave": 4,
          "pitchStep": "A",
        },
        {
          "chord": true,
          "duration": 1,
          "pitchOctave": 5,
          "pitchStep": "E",
        },
        {
          "duration": 1,
          "pitchOctave": 4,
          "pitchStep": "F",
        },
        {
          "chord": true,
          "duration": 1,
          "pitchOctave": 4,
          "pitchStep": "A",
        },
        {
          "chord": true,
          "duration": 1,
          "pitchOctave": 5,
          "pitchStep": "E",
        },
        {
          "duration": 2,
          "rest": true,
        },
        {
          "duration": 1,
          "rest": true,
        },
        {
          "duration": 1,
          "pitchOctave": 4,
          "pitchStep": "F",
        },
        {
          "chord": true,
          "duration": 1,
          "pitchOctave": 4,
          "pitchStep": "A",
        },
        {
          "chord": true,
          "duration": 1,
          "pitchOctave": 5,
          "pitchStep": "E",
        },
        {
          "duration": 2,
          "rest": true,
        },
      ],
    },
  },
  {
    "harmony": {
      "beats": 4,
      "beatsType": 4,
      "divisions": 2,
      "harmonyDuration": 8,
      "harmonyKind": "major-seventh",
      "harmonyRootAlter": 0,
      "harmonyRootStep": "C",
      "keyFifths": 0,
    },
    "sequence": {
      "leftHand": [
        {
          "duration": 1,
          "pitchOctave": 3,
          "pitchStep": "B",
        },
        {
          "duration": 1,
          "rest": true,
        },
        {
          "duration": 1,
          "rest": true,
        },
        {
          "duration": 1,
          "pitchOctave": 3,
          "pitchStep": "B",
        },
        {
          "duration": 4,
          "rest": true,
        },
      ],
      "rightHand": [
        {
          "duration": 1,
          "pitchOctave": 4,
          "pitchStep": "E",
        },
        {
          "chord": true,
          "duration": 1,
          "pitchOctave": 4,
          "pitchStep": "G",
        },
        {
          "chord": true,
          "duration": 1,
          "pitchOctave": 5,
          "pitchStep": "D",
        },
        {
          "duration": 1,
          "rest": true,
        },
        {
          "duration": 1,
          "pitchAlter": 1,
          "pitchOctave": 4,
          "pitchStep": "D",
        },
        {
          "duration": 1,
          "pitchOctave": 4,
          "pitchStep": "E",
        },
        {
          "chord": true,
          "duration": 1,
          "pitchOctave": 4,
          "pitchStep": "G",
        },
        {
          "chord": true,
          "duration": 1,
          "pitchOctave": 5,
          "pitchStep": "D",
        },
        {
          "duration": 4,
          "rest": true,
        },
      ],
    },
  },
  {
    "harmony": {
      "beats": 4,
      "beatsType": 4,
      "divisions": 2,
      "harmonyDuration": 8,
      "harmonyKind": "major-seventh",
      "harmonyRootAlter": 0,
      "harmonyRootStep": "C",
      "keyFifths": 0,
    },
    "sequence": {
      "leftHand": [
        {
          "duration": 1,
          "pitchOctave": 3,
          "pitchStep": "B",
        },
        {
          "duration": 1,
          "pitchOctave": 3,
          "pitchStep": "B",
        },
        {
          "duration": 1,
          "rest": true,
        },
        {
          "duration": 1,
          "pitchOctave": 3,
          "pitchStep": "B",
        },
        {
          "duration": 2,
          "rest": true,
        },
        {
          "duration": 2,
          "rest": true,
        },
      ],
      "rightHand": [
        {
          "duration": 1,
          "pitchOctave": 4,
          "pitchStep": "E",
        },
        {
          "chord": true,
          "duration": 1,
          "pitchOctave": 4,
          "pitchStep": "G",
        },
        {
          "chord": true,
          "duration": 1,
          "pitchAlter": 1,
          "pitchOctave": 5,
          "pitchStep": "C",
        },
        {
          "duration": 1,
          "pitchOctave": 4,
          "pitchStep": "E",
        },
        {
          "chord": true,
          "duration": 1,
          "pitchOctave": 4,
          "pitchStep": "G",
        },
        {
          "chord": true,
          "duration": 1,
          "pitchOctave": 5,
          "pitchStep": "D",
        },
        {
          "duration": 1,
          "rest": true,
        },
        {
          "duration": 1,
          "pitchOctave": 4,
          "pitchStep": "E",
        },
        {
          "chord": true,
          "duration": 1,
          "pitchOctave": 4,
          "pitchStep": "G",
        },
        {
          "chord": true,
          "duration": 1,
          "pitchOctave": 5,
          "pitchStep": "D",
        },
        {
          "duration": 2,
          "rest": true,
        },
        {
          "duration": 2,
          "rest": true,
        },
      ],
    },
  },
]
`;

exports[`extractPianoPartData > should extract piano part data 1`] = `
[
  {
    "harmony": {
      "beats": 4,
      "beatsType": 4,
      "divisions": 1,
      "harmonyDuration": 4,
      "harmonyKind": "minor-seventh",
      "harmonyRootAlter": 0,
      "harmonyRootStep": "D",
      "keyFifths": 0,
    },
    "sequence": {
      "leftHand": [
        {
          "duration": 4,
          "pitchOctave": 4,
          "pitchStep": "C",
        },
      ],
      "rightHand": [
        {
          "duration": 4,
          "pitchOctave": 4,
          "pitchStep": "F",
        },
        {
          "chord": true,
          "duration": 4,
          "pitchOctave": 4,
          "pitchStep": "A",
        },
        {
          "chord": true,
          "duration": 4,
          "pitchOctave": 5,
          "pitchStep": "E",
        },
      ],
    },
  },
  {
    "harmony": {
      "beats": 4,
      "beatsType": 4,
      "divisions": 1,
      "harmonyDuration": 4,
      "harmonyKind": "dominant",
      "harmonyRootAlter": 0,
      "harmonyRootStep": "G",
      "keyFifths": 0,
    },
    "sequence": {
      "leftHand": [
        {
          "duration": 4,
          "pitchOctave": 3,
          "pitchStep": "B",
        },
      ],
      "rightHand": [
        {
          "duration": 4,
          "pitchOctave": 4,
          "pitchStep": "F",
        },
        {
          "chord": true,
          "duration": 4,
          "pitchOctave": 4,
          "pitchStep": "A",
        },
        {
          "chord": true,
          "duration": 4,
          "pitchOctave": 5,
          "pitchStep": "E",
        },
      ],
    },
  },
  {
    "harmony": {
      "beats": 4,
      "beatsType": 4,
      "divisions": 1,
      "harmonyDuration": 4,
      "harmonyKind": "major-seventh",
      "harmonyRootAlter": 0,
      "harmonyRootStep": "C",
      "keyFifths": 0,
    },
    "sequence": {
      "leftHand": [
        {
          "duration": 4,
          "pitchOctave": 3,
          "pitchStep": "B",
        },
      ],
      "rightHand": [
        {
          "duration": 4,
          "pitchOctave": 4,
          "pitchStep": "E",
        },
        {
          "chord": true,
          "duration": 4,
          "pitchOctave": 4,
          "pitchStep": "G",
        },
        {
          "chord": true,
          "duration": 4,
          "pitchOctave": 5,
          "pitchStep": "D",
        },
      ],
    },
  },
  {
    "harmony": {
      "beats": 4,
      "beatsType": 4,
      "divisions": 1,
      "harmonyDuration": 4,
      "harmonyKind": "major-seventh",
      "harmonyRootAlter": 0,
      "harmonyRootStep": "C",
      "keyFifths": 0,
    },
    "sequence": {
      "leftHand": [
        {
          "duration": 4,
          "pitchOctave": 3,
          "pitchStep": "B",
        },
      ],
      "rightHand": [
        {
          "duration": 4,
          "pitchOctave": 4,
          "pitchStep": "E",
        },
        {
          "chord": true,
          "duration": 4,
          "pitchOctave": 4,
          "pitchStep": "G",
        },
        {
          "chord": true,
          "duration": 4,
          "pitchOctave": 5,
          "pitchStep": "D",
        },
      ],
    },
  },
]
`;
